Add Top word selection and integrate to the new version of EWB